# card10-firmware

./: meson.build
grufcardium/: README.md  core.c  core.h  display.c  display.h  input.h  main.c  meson.build  test.c  test.h
